--- a/wishes.html
+++ b/wishes.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+  <nav style="margin-bottom:20px; text-align:center;">
+  <a href="index.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Home</a>
+  <a href="story.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Our Story</a>
+  <a href="gallery.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Gallery</a>
+  <a href="wishes.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Wishes</a>
+  <a href="game.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Game</a>
+  <a href="treasure.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Treasure Hunt</a>
+</nav>
+
   <div class="container">
     <h1 class="title">💌 My Birthday Wish for You 💌</h1>
     <p class="subtitle typing">
@@ -18,3 +27,4 @@
   </div>
 </body>
 </html>
+
