--- a/story.html
+++ b/story.html
@@ -4,28 +4,73 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Story ❤️</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    body { 
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+      background: #fff0f6; 
+      color: #333; 
+      line-height: 1.6; 
+      padding: 20px; 
+    }
+    nav { margin-bottom: 20px; text-align: center; }
+    nav a { margin: 0 15px; text-decoration: none; color: #d6336c; font-weight: bold; }
+    h1 { text-align: center; color: #d6336c; }
+    .story-container { 
+      max-width: 800px; 
+      margin: auto; 
+      background: white; 
+      padding: 20px; 
+      border-radius: 12px; 
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1); 
+    }
+    .memory { margin-bottom: 20px; }
+    .memory h2 { color: #ff4d6d; margin-bottom: 5px; }
+    .memory p { margin: 0; }
+  </style>
 </head>
 <body>
-  <nav style="margin-bottom:20px; text-align:center;">
-  <a href="index.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Home</a>
-  <a href="story.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Our Story</a>
-  <a href="gallery.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Gallery</a>
-  <a href="wishes.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Wishes</a>
-  <a href="game.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Game</a>
-  <a href="treasure.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Treasure Hunt</a>
-</nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="story.html">Our Story</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="wishes.html">Wishes</a>
+    <a href="game.html">Game</a>
+    <a href="treasure.html">Treasure Hunt</a>
+  </nav>
 
-  <div class="container">
-    <h1 class="title">✨ Our Story ✨</h1>
-    <div class="timeline">
-      <p>💌 The day we first talked... magical.</p>
-      <p>😂 Our funny moments that only we understand.</p>
-      <p>🌙 Late night talks where time just flies.</p>
-      <p>💖 And now, here we are… stronger than ever.</p>
+  <h1>Our Story ❤️</h1>
+  <div class="story-container">
+    <div class="memory">
+      <h2>🌸 The First Night</h2>
+      <p>We first met online. That night, your mum wasn’t home and you were scared being alone.  
+      So we decided to video call — and somehow, one call turned into hours of talking, laughing, and just being there for each other until the morning.  
+      That night wasn’t just a conversation, it was the start of something so beautiful.</p>
     </div>
-    <button class="start-btn" onclick="goToGallery()">Next ➡️</button>
+
+    <div class="memory">
+      <h2>💌 Late Night Talks</h2>
+      <p>Since then, late night talks became our thing. Nights that were supposed to end with sleep always ended with laughter, secrets, and comfort.  
+      Every “goodnight” slowly turned into “let’s talk a little more” until the stars faded into morning light.</p>
+    </div>
+
+    <div class="memory">
+      <h2>🐻 Betuu Bachhu</h2>
+      <p>I call you <b>Betuu Bachhu</b> because you’re more than just my love — you’re my comfort, my safe place, my happiness.  
+      Every nickname has a piece of my heart, and every time I say it, I feel closer to you.</p>
+    </div>
+
+    <div class="memory">
+      <h2>❤️ Beyond Words</h2>
+      <p>We never needed to name what we share. It’s beyond labels, beyond definitions.  
+      What we have is something only we understand — deeper than words, stronger than distance, and more magical than anyone could imagine.</p>
+    </div>
+
+    <div class="memory">
+      <h2>🎉 Forever Us</h2>
+      <p>Today, I just want to remind you that our story is my favorite story.  
+      From that first video call to every single late night talk, I wouldn’t change a single moment.  
+      Happy Birthday, my Aastha ❤️ — your Chiku will always be here.</p>
+    </div>
   </div>
 </body>
 </html>
-
