--- a/index.html
+++ b/index.html
@@ -3,32 +3,107 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday Aastha ❤️</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Aastha & Abhishek</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+      color: #333;
+      text-align: center;
+    }
+
+    nav {
+      background: rgba(255, 255, 255, 0.85);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      padding: 15px;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      border-radius: 0 0 20px 20px;
+    }
+
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #d6336c;
+      font-weight: 600;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #ff4081;
+    }
+
+    /* Hidden "beautiful" nav tags (show but decorative only) */
+    nav .decor {
+      pointer-events: none; /* not clickable */
+      color: #aaa;
+      font-style: italic;
+      opacity: 0.7;
+    }
+
+    header {
+      padding: 100px 20px 60px;
+      background: linear-gradient(135deg, #fbc2eb, #a6c1ee);
+      border-radius: 0 0 50px 50px;
+      animation: fadeIn 1.5s ease-in-out;
+    }
+
+    header h1 {
+      font-size: 3em;
+      margin-bottom: 10px;
+      color: #fff;
+    }
+
+    header p {
+      font-size: 1.3em;
+      color: #fff;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    footer {
+      margin-top: 50px;
+      padding: 20px;
+      background: rgba(255,255,255,0.6);
+      border-radius: 20px 20px 0 0;
+      font-size: 0.9em;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 <body>
-  <nav style="margin-bottom:20px; text-align:center;">
-  <a href="index.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Home</a>
-  <a href="story.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Our Story</a>
-  <a href="gallery.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Gallery</a>
-  <a href="wishes.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Wishes</a>
-  <a href="game.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Game</a>
-  <a href="treasure.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Treasure Hunt</a>
-</nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="story.html">Our Story</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="wishes.html">Wishes</a>
+    <a href="game.html">Game</a>
+    <a href="treasure.html">Treasure Hunt</a>
 
-  <div class="container">
-    <h1 class="title">🎉 Happy Birthday Aastha 🎂❤️</h1>
-    <p class="subtitle">From your Chiku (Abhishek) 🥰</p>
+    <!-- Decorative non-clickable tags -->
+    <a class="decor">✨ Magic</a>
+    <a class="decor">💖 Forever</a>
+    <a class="decor">🌙 Betu</a>
+    <a class="decor">⭐ Chiku</a>
+    <a class="decor">🎶 Love</a>
+  </nav>
 
-    <button class="start-btn" onclick="goToStory()">Click to Begin 🎁</button>
-  </div>
+  <header>
+    <h1>Welcome, Aastha ❤️</h1>
+    <p>
+      This is a special website made with love by your Chiku 🥰.<br>
+      Explore the tabs above — each one hides something magical about us.
+    </p>
+  </header>
 
-  <!-- Background music -->
-  <audio id="bg-music" autoplay loop>
-    <source src="assets/music/bg-music.mp3" type="audio/mp3">
-  </audio>
-
-  <script src="script/main.js"></script>
+  <footer>
+    Made with ❤️ by Abhishek (your Chiku)
+  </footer>
 </body>
 </html>
-
