--- a/story.html
+++ b/story.html
@@ -3,29 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Story ❤️</title>
+  <title>Our Story</title>
   <style>
-    body { 
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-      background: #fff0f6; 
-      color: #333; 
-      line-height: 1.6; 
-      padding: 20px; 
+    body {
+      margin: 0;
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(135deg, #f6d365, #fda085);
+      color: #2d2d2d;
+      line-height: 1.8;
     }
-    nav { margin-bottom: 20px; text-align: center; }
-    nav a { margin: 0 15px; text-decoration: none; color: #d6336c; font-weight: bold; }
-    h1 { text-align: center; color: #d6336c; }
-    .story-container { 
-      max-width: 800px; 
-      margin: auto; 
-      background: white; 
-      padding: 20px; 
-      border-radius: 12px; 
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1); 
+
+    nav {
+      background: rgba(255, 255, 255, 0.85);
+      padding: 15px;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      border-radius: 0 0 20px 20px;
     }
-    .memory { margin-bottom: 20px; }
-    .memory h2 { color: #ff4d6d; margin-bottom: 5px; }
-    .memory p { margin: 0; }
+
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #b22222;
+      font-weight: 600;
+    }
+
+    nav a:hover {
+      color: #ff4081;
+    }
+
+    nav .decor {
+      pointer-events: none;
+      color: #888;
+      font-style: italic;
+      opacity: 0.8;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 50px auto;
+      padding: 20px;
+      background: rgba(255, 255, 255, 0.7);
+      border-radius: 20px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      animation: fadeIn 1.5s ease-in-out;
+    }
+
+    h1 {
+      text-align: center;
+      color: #b22222;
+    }
+
+    p {
+      font-size: 1.1em;
+      margin: 15px 0;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
@@ -36,41 +74,35 @@
     <a href="wishes.html">Wishes</a>
     <a href="game.html">Game</a>
     <a href="treasure.html">Treasure Hunt</a>
+
+    <!-- Decorative tags -->
+    <a class="decor">🌙 Late Nights</a>
+    <a class="decor">💖 Betuu</a>
+    <a class="decor">🥺 Bachhu</a>
+    <a class="decor">✨ Magic</a>
+    <a class="decor">🤍 Forever</a>
   </nav>
 
-  <h1>Our Story ❤️</h1>
-  <div class="story-container">
-    <div class="memory">
-      <h2>🌸 The First Night</h2>
-      <p>We first met online. That night, your mum wasn’t home and you were scared being alone.  
-      So we decided to video call — and somehow, one call turned into hours of talking, laughing, and just being there for each other until the morning.  
-      That night wasn’t just a conversation, it was the start of something so beautiful.</p>
-    </div>
-
-    <div class="memory">
-      <h2>💌 Late Night Talks</h2>
-      <p>Since then, late night talks became our thing. Nights that were supposed to end with sleep always ended with laughter, secrets, and comfort.  
-      Every “goodnight” slowly turned into “let’s talk a little more” until the stars faded into morning light.</p>
-    </div>
-
-    <div class="memory">
-      <h2>🐻 Betuu Bachhu</h2>
-      <p>I call you <b>Betuu Bachhu</b> because you’re more than just my love — you’re my comfort, my safe place, my happiness.  
-      Every nickname has a piece of my heart, and every time I say it, I feel closer to you.</p>
-    </div>
-
-    <div class="memory">
-      <h2>❤️ Beyond Words</h2>
-      <p>We never needed to name what we share. It’s beyond labels, beyond definitions.  
-      What we have is something only we understand — deeper than words, stronger than distance, and more magical than anyone could imagine.</p>
-    </div>
-
-    <div class="memory">
-      <h2>🎉 Forever Us</h2>
-      <p>Today, I just want to remind you that our story is my favorite story.  
-      From that first video call to every single late night talk, I wouldn’t change a single moment.  
-      Happy Birthday, my Aastha ❤️ — your Chiku will always be here.</p>
-    </div>
+  <div class="container">
+    <h1>Our Story ❤️</h1>
+    <p>
+      Pata hai baby, humari kahani kisi filmy script se kam nahi hai. Hum pehli baar online mile the... aur us din ka scene mujhe aaj bhi yaad hai. 
+    </p>
+    <p>
+      Tumhari mummy ghar pe nahi thi aur tum thoda dar rahi thi, aur tabhi humara pehla video call hua. Tumhare chehre pe woh innocence aur thoda sa darr... aur fir puri raat hum baat karte rahe. 
+      Bas uss raat se lekar aaj tak, woh late night baatein humara apna ek world ban gayi hai 🌙💫. 
+    </p>
+    <p>
+      Tumhe main hamesha "betuu bachhu" bulata hoon, aur mujhe tum "chiku" kehti ho... aur honestly, humari bonding ko koi naam ki zarurat hi nahi hai. 
+      Jo hum feel karte hain na, woh words se express hi nahi ho sakta. 
+    </p>
+    <p>
+      Kabhi kabhi lagta hai baby, duniya humein samajh bhi nahi paayegi... but mujhe farq nahi padta, kyunki tum mere paas ho, bas wahi kaafi hai. 
+      Tum meri life ka sabse sundar hissa ho, aur main hamesha tumhe apna sab kuch maanta hoon. 
+    </p>
+    <p style="text-align:center; font-size:1.3em; color:#d6336c;">
+      Tu meri Aastha hai... aur main tera Abhishek. Forever. ❤️
+    </p>
   </div>
 </body>
 </html>
