--- a/story.html
+++ b/story.html
@@ -3,106 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Story</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: "Poppins", sans-serif;
-      background: linear-gradient(135deg, #f6d365, #fda085);
-      color: #2d2d2d;
-      line-height: 1.8;
-    }
-
-    nav {
-      background: rgba(255, 255, 255, 0.85);
-      padding: 15px;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      border-radius: 0 0 20px 20px;
-    }
-
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: #b22222;
-      font-weight: 600;
-    }
-
-    nav a:hover {
-      color: #ff4081;
-    }
-
-    nav .decor {
-      pointer-events: none;
-      color: #888;
-      font-style: italic;
-      opacity: 0.8;
-    }
-
-    .container {
-      max-width: 800px;
-      margin: 50px auto;
-      padding: 20px;
-      background: rgba(255, 255, 255, 0.7);
-      border-radius: 20px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      animation: fadeIn 1.5s ease-in-out;
-    }
-
-    h1 {
-      text-align: center;
-      color: #b22222;
-    }
-
-    p {
-      font-size: 1.1em;
-      margin: 15px 0;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+  <title>Our Story ❤️</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- 5 Cute Romantic Tags -->
+  <div class="top-tags">
+    <span>💌 Pehli Baat</span>
+    <span>🌃 Late Night Talks</span>
+    <span>🥰 Betuuu</span>
+    <span>💖 Hum Dono</span>
+    <span>🌸 Forever Together</span>
+  </div>
+
+  <!-- Navbar -->
   <nav>
     <a href="index.html">Home</a>
     <a href="story.html">Our Story</a>
     <a href="gallery.html">Gallery</a>
-    <a href="wishes.html">Wishes</a>
-    <a href="game.html">Game</a>
+    <a href="wishes.html">Birthday Wishes</a>
+    <a href="game.html">Fun Game</a>
     <a href="treasure.html">Treasure Hunt</a>
-
-    <!-- Decorative tags -->
-    <a class="decor">🌙 Late Nights</a>
-    <a class="decor">💖 Betuu</a>
-    <a class="decor">🥺 Bachhu</a>
-    <a class="decor">✨ Magic</a>
-    <a class="decor">🤍 Forever</a>
   </nav>
 
+  <!-- Main content -->
   <div class="container">
     <h1>Our Story ❤️</h1>
-    <p>
-      Pata hai baby, humari kahani kisi filmy script se kam nahi hai. Hum pehli baar online mile the... aur us din ka scene mujhe aaj bhi yaad hai. 
+    <p style="font-size:18px; line-height:1.8;">
+      Humari kahani koi normal si kahani nahi hai, betuuu… 💖<br><br>
+
+      Pehli baar jab hum mile the online, tujhe yaad hai?  
+      Raat thi, tu akeli ghar pe thi aur thoda darr bhi laga tha.  
+      Tab humne woh pehla video call kiya tha 🌙.  
+      Aur uss raat se lekar subah tak hum baatein karte rahe…  
+      <em>aur sach batau toh, mujhe laga yeh ladki toh alag hi hai ✨.</em><br><br>
+
+      Tabse humari aadat ban gayi late night talks ki.  
+      Roz ki baaton mein hasi bhi hai, roothna bhi hai, aur woh pyaar jo shabdon se kabhi bayan hi nahi ho sakta 🥺.  
+      Main tujhe "Betuu" aur "Chikki babu" bulata hoon… aur woh naam sirf hum dono ki duniya ke hain. 🤍<br><br>
+
+      🌹 *Shayari for you, meri jaan:* 🌹<br>
+      *"Tere bina adhura tha main,  
+      teri muskaan se roshan hua,  
+      raat bhar baatein jo hoti hai humari,  
+      usi mein mera saara jahan basa hua."* 💕<br><br>
+
+      Aastha, hum apne rishtay ko naam nahi dete… kyunki shayad har rishta chhota pad jaye uske saamne jo hum feel karte hain.  
+      Bas itna kehna hai: <strong>tu meri aadat hai, meri dua hai, mera sab kuch hai. 🤍</strong>
     </p>
-    <p>
-      Tumhari mummy ghar pe nahi thi aur tum thoda dar rahi thi, aur tabhi humara pehla video call hua. Tumhare chehre pe woh innocence aur thoda sa darr... aur fir puri raat hum baat karte rahe. 
-      Bas uss raat se lekar aaj tak, woh late night baatein humara apna ek world ban gayi hai 🌙💫. 
-    </p>
-    <p>
-      Tumhe main hamesha "betuu bachhu" bulata hoon, aur mujhe tum "chiku" kehti ho... aur honestly, humari bonding ko koi naam ki zarurat hi nahi hai. 
-      Jo hum feel karte hain na, woh words se express hi nahi ho sakta. 
-    </p>
-    <p>
-      Kabhi kabhi lagta hai baby, duniya humein samajh bhi nahi paayegi... but mujhe farq nahi padta, kyunki tum mere paas ho, bas wahi kaafi hai. 
-      Tum meri life ka sabse sundar hissa ho, aur main hamesha tumhe apna sab kuch maanta hoon. 
-    </p>
-    <p style="text-align:center; font-size:1.3em; color:#d6336c;">
-      Tu meri Aastha hai... aur main tera Abhishek. Forever. ❤️
-    </p>
+
+    <a href="gallery.html" class="next-btn">👉 Go to Next Page</a>
   </div>
+
 </body>
 </html>
