--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aastha ❤️</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Happy Birthday My Love ❤️</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="script/main.js" defer></script>
 </head>
 <body>
 
-  <!-- 5 Cute Romantic Tags -->
   <div class="top-tags">
     <span>🌙 My Moon</span>
     <span>💖 Betuu</span>
@@ -17,26 +16,22 @@
     <span>🤍 Forever</span>
   </div>
 
-  <!-- Navbar -->
-  <nav>
+  <div class="navbar">
     <a href="index.html">Home</a>
     <a href="story.html">Our Story</a>
     <a href="gallery.html">Gallery</a>
-    <a href="wishes.html">Birthday Wishes</a>
-    <a href="game.html">Fun Game</a>
-    <a href="treasure.html">Treasure Hunt</a>
-  </nav>
+    <a href="treasure.html">Treasure</a>
+    <a href="wishes.html">Wishes</a>
+    <a href="game.html">Game</a>
+  </div>
 
-  <!-- Main content -->
   <div class="container">
-    <h1>Happy Birthday Aastha ❤️</h1>
-    <p>
-      This little website is made just for you, meri jaan 🥰.<br>
-      Each page is a part of our story, our love, and my way of saying<br>
-      how much you mean to me 💖.
-    </p>
-    <a href="story.html" class="next-btn">👉 Go to Next Page</a>
+    <h1>🎂 Happy Birthday, My Love ❤️</h1>
+    <p>This website is my little surprise for you, meri jaan 🥰.  
+       Every page has a special memory or fun surprise 💕.</p>
+    <a href="story.html" class="next-btn">Go to Our Story →</a>
   </div>
 
 </body>
 </html>
+
