--- a/story.html
+++ b/story.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Story ❤️</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="script/main.js" defer></script>
 </head>
 <body>
 
-  <!-- 5 Cute Romantic Tags -->
   <div class="top-tags">
     <span>💌 Pehli Baat</span>
     <span>🌃 Late Night Talks</span>
@@ -17,43 +16,30 @@
     <span>🌸 Forever Together</span>
   </div>
 
-  <!-- Navbar -->
-  <nav>
+  <div class="navbar">
     <a href="index.html">Home</a>
     <a href="story.html">Our Story</a>
     <a href="gallery.html">Gallery</a>
-    <a href="wishes.html">Birthday Wishes</a>
-    <a href="game.html">Fun Game</a>
-    <a href="treasure.html">Treasure Hunt</a>
-  </nav>
+    <a href="treasure.html">Treasure</a>
+    <a href="wishes.html">Wishes</a>
+    <a href="game.html">Game</a>
+  </div>
 
-  <!-- Main content -->
   <div class="container">
-    <h1>Our Story ❤️</h1>
-    <p style="font-size:18px; line-height:1.8;">
-      Humari kahani koi normal si kahani nahi hai, betuuu… 💖<br><br>
+    <h1>🌙 Our Beautiful Story</h1>
+    <p>Hamari shuruaat ek video call se hui… tum us raat akeli thi aur thodi si dar gayi thi,  
+       lekin us raat hum dono ki kahani likh di gayi. Humne baatein ki, hase, aur raat bhar jag kar ek dusre ko mehsoos kiya.</p>
 
-      Pehli baar jab hum mile the online, tujhe yaad hai?  
-      Raat thi, tu akeli ghar pe thi aur thoda darr bhi laga tha.  
-      Tab humne woh pehla video call kiya tha 🌙.  
-      Aur uss raat se lekar subah tak hum baatein karte rahe…  
-      <em>aur sach batau toh, mujhe laga yeh ladki toh alag hi hai ✨.</em><br><br>
+    <div class="shayari">"Tum meri woh aadat ho jo kabhi chhut hi nahi sakti…  
+       Tum meri woh zarurat ho jo kabhi khatm hi nahi hoti ❤️"</div>
 
-      Tabse humari aadat ban gayi late night talks ki.  
-      Roz ki baaton mein hasi bhi hai, roothna bhi hai, aur woh pyaar jo shabdon se kabhi bayan hi nahi ho sakta 🥺.  
-      Main tujhe "Betuu" aur "Chikki babu" bulata hoon… aur woh naam sirf hum dono ki duniya ke hain. 🤍<br><br>
+    <p>Aaj bhi jab bhi hum late night baatein karte hain, lagta hai jaise duniya ruk gayi ho,  
+       sirf hum dono hain aur humara apna ek chhota sa jahan hai.</p>
 
-      🌹 *Shayari for you, meri jaan:* 🌹<br>
-      *"Tere bina adhura tha main,  
-      teri muskaan se roshan hua,  
-      raat bhar baatein jo hoti hai humari,  
-      usi mein mera saara jahan basa hua."* 💕<br><br>
+    <div class="shayari">"Na koi rishta, na koi naam,  
+       phir bhi tum meri zindagi ki sabse khoobsurat daastaan ho…"</div>
 
-      Aastha, hum apne rishtay ko naam nahi dete… kyunki shayad har rishta chhota pad jaye uske saamne jo hum feel karte hain.  
-      Bas itna kehna hai: <strong>tu meri aadat hai, meri dua hai, mera sab kuch hai. 🤍</strong>
-    </p>
-
-    <a href="gallery.html" class="next-btn">👉 Go to Next Page</a>
+    <a href="gallery.html" class="next-btn">Next → Gallery</a>
   </div>
 
 </body>
