--- a/treasure.html
+++ b/treasure.html
@@ -2,28 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Surprise 💝</title>
+  <title>Treasure ❤️</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <script src="script/main.js" defer></script>
 </head>
 <body>
-  <nav style="margin-bottom:20px; text-align:center;">
-  <a href="index.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Home</a>
-  <a href="story.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Our Story</a>
-  <a href="gallery.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Gallery</a>
-  <a href="wishes.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Wishes</a>
-  <a href="game.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Game</a>
-  <a href="treasure.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Treasure Hunt</a>
-</nav>
+
+  <div class="top-tags">
+    <span>🎁 Secret</span>
+    <span>💖 Surprise</span>
+    <span>🥰 Betuu</span>
+    <span>🌸 Smile</span>
+    <span>✨ Love</span>
+  </div>
+
+  <div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="story.html">Our Story</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="treasure.html">Treasure</a>
+    <a href="wishes.html">Wishes</a>
+    <a href="game.html">Game</a>
+  </div>
 
   <div class="container">
-    <h1 class="title">🎊 Surprise! 🎊</h1>
-    <p class="subtitle">
-      Aastha, you are my forever 💕  
-      No matter what, I’ll always love you — Yours, Chiku ❤️
-    </p>
-    <div class="hearts">💖💖💖</div>
+    <h1>🎁 Secret Treasure</h1>
+    <p>Meri pyaari betuu, yeh tumhare liye ek chhota sa secret message hai…</p>
+
+    <div class="shayari">
+      "Tum meri zindagi ka woh hissa ho jo kabhi khatam nahi hoga,  
+       Tumhare bina main adhoora hoon 💖"
+    </div>
+
+    <p>Click the button below to reveal a little surprise 🎉</p>
+    <button onclick="alert('Surprise! ❤️ Tum meri sabse khaas ho aur hamesha meri rahogi 🥰')">Reveal Surprise</button>
+
+    <a href="wishes.html" class="next-btn">Next → Wishes</a>
   </div>
+
 </body>
 </html>
-
