--- a/wishes.html
+++ b/wishes.html
@@ -2,29 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Birthday Wishes 🎂</title>
+  <title>Birthday Wishes ❤️</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <script src="script/main.js" defer></script>
 </head>
 <body>
-  <nav style="margin-bottom:20px; text-align:center;">
-  <a href="index.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Home</a>
-  <a href="story.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Our Story</a>
-  <a href="gallery.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Gallery</a>
-  <a href="wishes.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Wishes</a>
-  <a href="game.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Game</a>
-  <a href="treasure.html" style="margin: 0 15px; text-decoration:none; color:#d6336c; font-weight:bold;">Treasure Hunt</a>
-</nav>
+
+  <div class="top-tags">
+    <span>🎂 Cake</span>
+    <span>💖 Love</span>
+    <span>🥰 Betuu</span>
+    <span>🌸 Happiness</span>
+    <span>✨ Forever</span>
+  </div>
+
+  <div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="story.html">Our Story</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="treasure.html">Treasure</a>
+    <a href="wishes.html">Wishes</a>
+    <a href="game.html">Game</a>
+  </div>
 
   <div class="container">
-    <h1 class="title">💌 My Birthday Wish for You 💌</h1>
-    <p class="subtitle typing">
-      Happy Birthday Aastha ❤️ You are my everything. 
-      From our silly laughs to our deep talks, every moment with you is special. 
-      I promise to love you more each day. Yours forever, your Chiku 💕
-    </p>
-    <button class="start-btn" onclick="goToGame()">Next ➡️</button>
+    <h1>🎉 Happy Birthday, My Betuu ❤️</h1>
+    <p>Meri jaan, tum meri zindagi ki sabse khoobsurat cheez ho.  
+       Aaj ka din sirf tumhare liye hai 🥰</p>
+
+    <div class="shayari">
+      "Har subah tumhari muskaan ke saath shuru ho,  
+       Har raat tumhare pyaar ke saath khatam ho,  
+       Happy Birthday meri pyaari Betuu 💖"
+    </div>
+
+    <p>May your day be filled with love, laughter, and all the happiness in the world 🥰</p>
+
+    <a href="game.html" class="next-btn">Next → Fun Game</a>
   </div>
+
 </body>
 </html>
-
