--- a/wishes.html
+++ b/wishes.html
@@ -27,17 +27,20 @@
 
   <div class="container">
     <h1>🎉 Happy Birthday, My Betuu ❤️</h1>
-    <p>Meri jaan, tum meri zindagi ki sabse khoobsurat cheez ho.  
-       Aaj ka din sirf tumhare liye hai 🥰</p>
 
     <div class="shayari">
-      "Har subah tumhari muskaan ke saath shuru ho,  
-       Har raat tumhare pyaar ke saath khatam ho,  
+      "Har subah tumhari muskaan ke saath shuru ho,<br>
+       Har raat tumhare pyaar ke saath khatam ho,<br>
        Happy Birthday meri pyaari Betuu 💖"
     </div>
 
-    <p>May your day be filled with love, laughter, and all the happiness in the world 🥰</p>
+    <p>
+      Meri jaan, tum meri zindagi ki sabse khoobsurat cheez ho.<br>
+      Aaj ka din sirf tumhare liye hai 🥰<br>
+      May your day be filled with love, laughter, and all the happiness in the world.
+    </p>
 
+    <!-- Next button -->
     <a href="game.html" class="next-btn">Next → Fun Game</a>
   </div>
 
