--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Happy Birthday My Love ❤️</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="script/main.js" defer></script>
@@ -34,4 +35,5 @@
 
 </body>
 </html>
+
 
