--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Gallery ❤️</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="script/main.js" defer></script>
@@ -66,3 +67,4 @@
 
 </body>
 </html>
+
