--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script src="script/main.js" defer></script>
 </head>
 <body>
+  <audio src="assets/music/love-song.mp3" autoplay loop></audio>
+
 
   <div class="top-tags">
     <span>🌙 My Moon</span>
@@ -35,5 +37,6 @@
 
 </body>
 </html>
+
 
 
