--- a/game.html
+++ b/game.html
@@ -29,6 +29,7 @@
   </style>
 </head>
 <body>
+  <audio src="assets/music/love-song.mp3" autoplay loop></audio>
 
   <div class="top-tags">
     <span>🎈 Pop Balloons</span>
@@ -64,4 +65,5 @@
 
 </body>
 </html>
+
 
