--- a/treasure.html
+++ b/treasure.html
@@ -8,6 +8,7 @@
   <script src="script/main.js" defer></script>
 </head>
 <body>
+  <audio src="assets/music/love-song.mp3" autoplay loop></audio>
 
   <div class="top-tags">
     <span>🎁 Secret</span>
@@ -43,4 +44,5 @@
 
 </body>
 </html>
+
 
