--- a/wishes.html
+++ b/wishes.html
@@ -8,6 +8,7 @@
   <script src="script/main.js" defer></script>
 </head>
 <body>
+  <audio src="assets/music/love-song.mp3" autoplay loop></audio>
 
   <div class="top-tags">
     <span>🎂 Cake</span>
@@ -47,4 +48,5 @@
 
 </body>
 </html>
+
 
