--- a/story.html
+++ b/story.html
@@ -8,6 +8,7 @@
   <script src="script/main.js" defer></script>
 </head>
 <body>
+  <audio src="assets/music/love-song.mp3" autoplay loop></audio>
 
   <div class="top-tags">
     <span>💌 Pehli Baat</span>
@@ -45,4 +46,5 @@
 
 </body>
 </html>
+
 
