--- a/gallery.html
+++ b/gallery.html
@@ -34,6 +34,7 @@
   </style>
 </head>
 <body>
+  <audio src="assets/music/love-song.mp3" autoplay loop></audio>
 
   <div class="top-tags">
     <span>📸 Memories</span>
@@ -67,4 +68,5 @@
 
 </body>
 </html>
+
 
